--- a/build.gradle
+++ b/build.gradle
@@ -43,10 +43,10 @@ dependencies {
 	//HTTP 요청을 Webflux 라이브러리의 Webclient로 구현했다.
 	//만약 카카오 로그인 페이지를 구현하지 않을 예정이라면, thymeleaf는 추가하지 않아도 된다.
 	//Webflux
-//	implementation 'org.springframework.boot:spring-boot-starter-webflux'
-//	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'             // Thymeleaf Template
-//	implementation 'org.springframework.boot:spring-boot-starter-webflux:2.7.13'
-//	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'             // Thymeleaf Template
+	implementation 'org.springframework.boot:spring-boot-starter-webflux:2.7.13'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 }
 
 tasks.named('bootBuildImage') {
